<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="150dp"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="10dp"
    android:layout_marginHorizontal="30dp"
    android:layout_marginBottom="25dp"
    app:cardElevation="5dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="20dp">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/imgPet"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:scaleType="centerCrop"
            android:transitionName="shared_image"
            app:shapeAppearanceOverlay="@style/AddedImageVirtualPet"
            android:src="@drawable/adopt_virtual_dog"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/namePet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/plus_jakarta_sans_bold"
            android:text="@string/dummy_adopt_name"
            android:textColor="@color/blackText"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@id/imgPet"
            app:layout_constraintTop_toTopOf="@id/imgPet" />

        <ImageView
            android:id="@+id/ic_location"
            android:layout_width="10dp"
            android:layout_height="10dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/ic_location"
            app:layout_constraintStart_toStartOf="@id/namePet"
            app:layout_constraintTop_toBottomOf="@id/namePet" />

        <TextView
            android:id="@+id/txtLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:fontFamily="@font/plus_jakarta_sans_semibold"
            android:text="@string/dummy_location_user"
            android:textColor="@color/halfBlackText"
            android:textSize="10sp"
            app:layout_constraintBottom_toBottomOf="@id/ic_location"
            app:layout_constraintStart_toEndOf="@id/ic_location"
            app:layout_constraintTop_toTopOf="@id/ic_location" />

        <ImageView
            android:id="@+id/ic_gender"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/background_type_adopt"
            android:padding="5dp"
            android:src="@drawable/ic_gender"
            app:layout_constraintStart_toStartOf="@id/imgPet"
            app:layout_constraintTop_toBottomOf="@id/imgPet" />

        <TextView
            android:id="@+id/gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:fontFamily="@font/plus_jakarta_sans_semibold"
            android:text="@string/gender"
            android:textColor="@color/halfBlackText"
            android:textSize="8sp"
            app:layout_constraintStart_toEndOf="@id/ic_gender"
            app:layout_constraintTop_toTopOf="@id/ic_gender" />

        <TextView
            android:id="@+id/genderPet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/plus_jakarta_sans_medium"
            android:text="@string/dummy_gender"
            android:textColor="@color/blackText"
            android:textSize="11sp"
            app:layout_constraintStart_toStartOf="@id/gender"
            app:layout_constraintTop_toBottomOf="@id/gender" />

        <ImageView
            android:id="@+id/ic_age"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="35dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/background_type_adopt"
            android:padding="5dp"
            android:src="@drawable/ic_age"
            app:layout_constraintStart_toEndOf="@+id/genderPet"
            app:layout_constraintTop_toBottomOf="@id/imgPet" />

        <TextView
            android:id="@+id/age"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:fontFamily="@font/plus_jakarta_sans_semibold"
            android:text="@string/age"
            android:textColor="@color/halfBlackText"
            android:textSize="8sp"
            app:layout_constraintStart_toEndOf="@id/ic_age"
            app:layout_constraintTop_toTopOf="@id/ic_age" />

        <TextView
            android:id="@+id/agePet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/plus_jakarta_sans_medium"
            android:text="@string/dummy_age"
            android:textColor="@color/blackText"
            android:textSize="11sp"
            app:layout_constraintStart_toStartOf="@id/age"
            app:layout_constraintTop_toBottomOf="@id/age" />

        <ImageView
            android:id="@+id/ic_ras"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/background_type_adopt"
            android:padding="5dp"
            android:src="@drawable/ic_ras"
            app:layout_constraintStart_toEndOf="@+id/agePet"
            app:layout_constraintTop_toBottomOf="@id/imgPet" />

        <TextView
            android:id="@+id/ras"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:fontFamily="@font/plus_jakarta_sans_semibold"
            android:text="@string/ras"
            android:textColor="@color/halfBlackText"
            android:textSize="8sp"
            app:layout_constraintStart_toEndOf="@id/ic_ras"
            app:layout_constraintTop_toTopOf="@id/ic_ras" />

        <TextView
            android:id="@+id/rasPet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/plus_jakarta_sans_medium"
            android:text="@string/dummy_ras"
            android:textColor="@color/blackText"
            android:textSize="11sp"
            app:layout_constraintStart_toStartOf="@id/ras"
            app:layout_constraintTop_toBottomOf="@id/ras" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>