<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="350dp"
        android:layout_height="300dp"
        app:cardElevation="15dp"
        app:cardCornerRadius="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/backgroundImage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="fitXY"
                android:src="@drawable/background_virtual_pet"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
            
            <ImageButton
                android:id="@+id/btnLove"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="75dp"
                android:src="@drawable/ic_love_grey"
                android:background="@drawable/background_button_next_grey"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/pet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="11sp"
                android:textColor="@color/primaryColor"
                android:text="@string/cat"
                android:layout_marginTop="60dp"
                android:fontFamily="@font/plus_jakarta_sans_bold"
                app:layout_constraintStart_toStartOf="@id/btnLove"
                app:layout_constraintTop_toBottomOf="@id/btnLove"/>

            <TextView
                android:id="@+id/namePet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="36sp"
                android:textColor="@color/black"
                android:text="@string/dummy_name_pet"
                android:letterSpacing="-0.03"
                android:layout_marginTop="-13dp"
                android:fontFamily="@font/plus_jakarta_sans_bold"
                app:layout_constraintStart_toStartOf="@id/pet"
                app:layout_constraintTop_toBottomOf="@id/pet"/>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginBottom="20dp"
                app:layout_constraintBottom_toBottomOf="parent">

                <androidx.cardview.widget.CardView
                    android:id="@+id/type_age"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:foreground="@drawable/background_type_pet"
                    android:layout_marginEnd="5dp"
                    android:backgroundTint="@android:color/transparent"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="0dp">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:id="@+id/ic_age"
                            android:layout_width="12dp"
                            android:layout_height="12dp"
                            android:layout_marginTop="10dp"
                            android:layout_marginStart="10dp"
                            android:src="@drawable/ic_age"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"/>

                        <TextView
                            android:id="@+id/age"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="15dp"
                            android:fontFamily="@font/plus_jakarta_sans_regular"
                            android:textSize="8sp"
                            android:textColor="@color/halfBlackText"
                            android:text="@string/age"
                            app:layout_constraintStart_toStartOf="@id/ic_age"
                            app:layout_constraintTop_toBottomOf="@+id/ic_age"/>

                        <TextView
                            android:id="@+id/agePet"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:fontFamily="@font/plus_jakarta_sans_bold"
                            android:textSize="11sp"
                            android:layout_marginBottom="10dp"
                            android:textColor="@color/primaryColor"
                            android:text="@string/dummy_age"
                            app:layout_constraintStart_toStartOf="@id/age"
                            app:layout_constraintTop_toBottomOf="@+id/age"
                            app:layout_constraintBottom_toBottomOf="parent"/>

                    </androidx.constraintlayout.widget.ConstraintLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/type_weight"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_marginEnd="5dp"
                    android:foreground="@drawable/background_type_pet"
                    android:backgroundTint="@android:color/transparent"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="0dp">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:id="@+id/ic_weight"
                            android:layout_width="12dp"
                            android:layout_height="12dp"
                            android:layout_marginTop="10dp"
                            android:layout_marginStart="10dp"
                            android:src="@drawable/ic_weight"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"/>

                        <TextView
                            android:id="@+id/weight"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="15dp"
                            android:fontFamily="@font/plus_jakarta_sans_regular"
                            android:textSize="8sp"
                            android:textColor="@color/halfBlackText"
                            android:text="@string/weight"
                            app:layout_constraintStart_toStartOf="@id/ic_weight"
                            app:layout_constraintTop_toBottomOf="@+id/ic_weight"/>

                        <TextView
                            android:id="@+id/weightPet"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:fontFamily="@font/plus_jakarta_sans_bold"
                            android:textSize="11sp"
                            android:layout_marginBottom="10dp"
                            android:textColor="@color/primaryColor"
                            android:text="@string/dummy_weight"
                            app:layout_constraintStart_toStartOf="@id/weight"
                            app:layout_constraintTop_toBottomOf="@+id/weight"
                            app:layout_constraintBottom_toBottomOf="parent"/>

                    </androidx.constraintlayout.widget.ConstraintLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/type_gender"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_marginEnd="5dp"
                    android:foreground="@drawable/background_type_pet"
                    android:backgroundTint="@android:color/transparent"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="0dp">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:id="@+id/ic_gender"
                            android:layout_width="12dp"
                            android:layout_height="12dp"
                            android:layout_marginTop="10dp"
                            android:layout_marginStart="10dp"
                            android:src="@drawable/ic_gender"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"/>

                        <TextView
                            android:id="@+id/gender"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="15dp"
                            android:fontFamily="@font/plus_jakarta_sans_regular"
                            android:textSize="8sp"
                            android:textColor="@color/halfBlackText"
                            android:text="@string/gender"
                            app:layout_constraintStart_toStartOf="@id/ic_gender"
                            app:layout_constraintTop_toBottomOf="@+id/ic_gender"/>

                        <TextView
                            android:id="@+id/genderPet"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:fontFamily="@font/plus_jakarta_sans_bold"
                            android:textSize="11sp"
                            android:layout_marginBottom="10dp"
                            android:textColor="@color/primaryColor"
                            android:text="@string/dummy_gender"
                            app:layout_constraintStart_toStartOf="@id/gender"
                            app:layout_constraintTop_toBottomOf="@+id/gender"
                            app:layout_constraintBottom_toBottomOf="parent"/>

                    </androidx.constraintlayout.widget.ConstraintLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/type_ras"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:foreground="@drawable/background_type_pet"
                    android:backgroundTint="@android:color/transparent"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="0dp">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:id="@+id/ic_ras"
                            android:layout_width="12dp"
                            android:layout_height="12dp"
                            android:layout_marginTop="10dp"
                            android:layout_marginStart="10dp"
                            android:src="@drawable/ic_ras"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"/>

                        <TextView
                            android:id="@+id/ras"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="15dp"
                            android:fontFamily="@font/plus_jakarta_sans_regular"
                            android:textSize="8sp"
                            android:textColor="@color/halfBlackText"
                            android:text="@string/ras"
                            app:layout_constraintStart_toStartOf="@id/ic_ras"
                            app:layout_constraintTop_toBottomOf="@+id/ic_ras"/>

                        <TextView
                            android:id="@+id/rasPet"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:fontFamily="@font/plus_jakarta_sans_bold"
                            android:textSize="11sp"
                            android:layout_marginBottom="10dp"
                            android:textColor="@color/primaryColor"
                            android:text="@string/dummy_ras"
                            app:layout_constraintStart_toStartOf="@id/ras"
                            app:layout_constraintTop_toBottomOf="@+id/ras"
                            app:layout_constraintBottom_toBottomOf="parent"/>

                    </androidx.constraintlayout.widget.ConstraintLayout>

                </androidx.cardview.widget.CardView>

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <ImageView
        android:id="@+id/categoryDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="25dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="-50dp"
        app:layout_constraintStart_toStartOf="@id/cardView"
        app:layout_constraintTop_toTopOf="@id/cardView"
        android:src="@drawable/virtual_cat" />

</androidx.constraintlayout.widget.ConstraintLayout>
